# AIS_voter_Novgorod

./: README.md  fluttercleanrecursive.sh
AIS_voting/: README.md
AIS_voting/docs/trash/: VissonicInterface.docx  structure.odt  versions.odt  Инструкция по установке Сервера АИС (1) (1).docx  Инструкция по установке дополнительного ПО на Astralinux (1) (1).docx  Инструкция по установке дополнительного ПО на Astralinux (1).docx  Инструкция по установке дополнительного ПО на Astralinux.docx
AIS_voting/docs/vissonic_docs/: Control Protocol by TCPIP.docx  VISSONIC main unit and software protocol.odt  Ответы из Китая.odt
AIS_voting/scripts/: common.txt
AIS_voting/scripts/postgres/: FullClearDB.sql  common.sql  deleteOldData.sql
AIS_voting/scripts/remote_control/: check_pid.sh  deploy.sh  remote_check_pid.sh  remote_deploy.sh  remote_gsettings.sh  remote_lib.sh  remote_poweroff.sh  remote_reboot.sh  remote_set_swap.sh  remote_timesyncd.sh  wks.txt
AIS_voting/src/Icons/: downloader.desktop  loader.desktop  operatorPanel.desktop  server.desktop  startDeputy.sh  startOperatorPanel.sh  startServer.sh  storeboard.desktop
AIS_voting/src/clients/client_plugins/jacarta_token/linux/: CMakeLists.txt  jacarta_token_plugin.cc
AIS_voting/src/clients/client_plugins/jacarta_token/linux/common/: P11Loader.cpp  P11Loader.h  Utils.cpp  Utils.h  common.cpp  common.h  jcPKCS11f.h  tools.cmake
AIS_voting/src/clients/client_plugins/jacarta_token/linux/include/: C_jcControl.h  WinCryptEx.h  cryptoki.h  jcPKCS11.h  jcPKCS11t.h  pkcs11.h  pkcs11t.h
AIS_voting/src/clients/client_plugins/jacarta_token/linux/include/jacarta_token/: jacarta_token_plugin.h
AIS_voting/src/clients/client_plugins/pdf_view/linux/: CMakeLists.txt  pdf_view_platform_view.cc  pdf_view_platform_view.h  pdf_view_plugin.cc  pdf_view_view_factory.cc  pdf_view_view_factory.h
AIS_voting/src/clients/client_plugins/pdf_view/linux/evince/: evince-document.h  evince-shell.h  evince-view.h
AIS_voting/src/clients/client_plugins/pdf_view/linux/evince/libmisc/: ev-page-action-widget.c
AIS_voting/src/clients/client_plugins/pdf_view/linux/evince/libview/: ev-document-model.h  ev-jobs.h  ev-print-operation.h  ev-stock-icons.h  ev-view-presentation.h  ev-view.h
AIS_voting/src/clients/client_plugins/pdf_view/linux/evince/shell/: ev-file-monitor.c  ev-keyring.c  ev-loading-message.c  ev-media-player-keys.c  ev-metadata.c  ev-toolbar.c  ev-utils.c  ev-window-title.c  ev-window-title.h  ev-window.c  ev-window.h  ev-zoom-action.c
AIS_voting/src/clients/client_plugins/pdf_view/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
AIS_voting/src/database/: ais_voter_16122021.dump  dev_dump.sql  dump.txt
AIS_voting/src/file_server/: README.md  analysis_options.yaml  database.yaml  pubspec.yaml
AIS_voting/src/reports/: AIS_report.odb
AIS_voting/src/services/: .packages  README.md  SomeFile.txt  (+1 more)
(+1535 files in other folders)
